<resources>
    <string name="app_name">ZaitaFC</string>
    <string name="logo">logo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chat">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="about_zaita_fc">About Zaita FC</string>
    <string name="full_name">Full Name: </string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="gender">Gender:</string>
    <string name="player_name_title">Player Name:</string>
    <string name="player_position_title">Player Position:</string>
    <string name="player_age_title">Player Age:</string>
    <string name="button_undo">undo</string>
    <string name="member_name_title">Member Name:</string>
    <string name="member_position_title">Member Role:</string>
    <string name="member_age_title">Member Age:</string>
    <string name="member_join_date_title">Joined in:</string>
    <string name="position">Position:</string>
    <string name="age">Age:</string>
    <string name="title_news">News</string>
    <string name="title_members">Members</string>
    <string name="post_image">Post Image</string>
    <string name="post_video">Post Video</string>
    <string name="play_button">Play Button</string>
    <string name="player_join_date_title">Joined in:</string>
    <string name="user_photo">User Photo</string>
    <string name="settings_button">Settings Button</string>
    <string name="tab_all">All</string>
    <string name="tab_football">Football</string>
    <string name="tab_pingpong">PingPong</string>
    <string name="player_number_title">Player Number:</string>
    <string name="zaita_football_club">Zaita Football Club</string>
    <string name="sign_in_label">Sign In</string>
    <string name="sign_up">Create new account</string>
    <string name="join">Join</string>
    <string name="minimum_password">The password should be at least 6 characters</string>
    <string name="auth_failed">Login Failed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="empty_name">Please Provide Your Name</string>
    <string name="empty_age">Please Provide Your Age</string>
    <string name="no_gender">Please Provide Yor Gender</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="no_internet">Connection error: Failed to connect to server</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <!-- Chat Strings -->
    <string name="no_chats_found">No Chats Found</string>
    <string name="no_messages_found">No Messages Found</string>
    <string name="uploading_media">Uploading Media…</string>
    <string name="chat">Chats</string>
    <string name="chat_image">Chat Image</string>
    <string name="attach_image">Attach Image</string>
    <string name="send_button">Sent Button</string>
    <string name="type_your_message">Type your message</string>
    <string name="today">Today</string>
    <string name="error_failed_to_send_message">Message failed to send!</string>
    <string name="message_sent">Message Sent</string>
    <!-- End Of Chat Strings -->

    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="username_email">Username/Email</string>
    <string name="birthday">Birthday</string>
    <string name="empty_position">Please provide your position!</string>
    <string name="article_text">Text</string>
    <string name="article_image">Image</string>
    <string name="article_video">Video</string>
    <string name="news_feed">News Feed</string>
    <string name="add_news_article">Add News Article</string>
    <string name="post_body">Post Body</string>
    <string name="post_title">Post Title</string>
    <string name="article_images">Images</string>
    <string name="save">Save</string>
    <string name="error_empty_title">Please provide a title!</string>
    <string name="error_empty_body">Please provide the post description!</string>
    <string name="error_empty_post_type">Please select your post type!</string>
    <string name="error_empty_media">Please upload some media or choose text type!</string>
    <string name="images">images</string>
    <string name="delete">delete</string>
    <string name="add_image">Add Image</string>
    <string name="new_chat">New Chat</string>
    <string name="error_permission_denied">Permission Denied!</string>
    <string name="videos">Videos</string>
    <string name="add_video">Add Video</string>
    <string name="error_unsupported_format">Unsupported Format!</string>
    <string name="add_media">Add Media</string>
    <string name="no_contacts_selected">No Contacts selected!</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="group_name">Group Name</string>

</resources>
