<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/cardView_member"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/user_photo"
            android:src="@drawable/ic_user"
            tools:background="@color/colorPrimary"
            android:id="@+id/imageView_userPhoto"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView_userPhoto">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleMemberName"
                android:text="@string/member_name_title"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_memberName"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textView_titleMemberName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleMemberPosition"
                android:layout_below="@id/textView_titleMemberName"
                android:text="@string/member_position_title"
                android:layout_marginStart="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_memberPosition"
                android:layout_below="@id/textView_memberName"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/textView_titleMemberPosition"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleMemberAge"
                android:text="@string/member_age_title"
                android:layout_marginStart="16dp"
                android:layout_below="@id/textView_titleMemberPosition" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_memberAge"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_memberPosition"
                android:layout_toEndOf="@id/textView_titleMemberAge"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_titleMemberJoinDate"
                android:text="@string/member_join_date_title"
                android:layout_marginStart="16dp"
                android:layout_below="@id/textView_titleMemberAge" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_memberJoinDate"
                android:layout_marginStart="8dp"
                android:layout_below="@id/textView_memberAge"
                android:layout_toEndOf="@id/textView_titleMemberJoinDate"/>

        </RelativeLayout>
        <Button
            android:id="@+id/undo_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"
            android:text="@string/button_undo"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</android.support.v7.widget.CardView>