<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".activities.AddNewsArticleActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:id="@+id/appBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/add_news_article" />
        </android.support.design.widget.AppBarLayout>

        <include
            android:id="@+id/relativeLayout_upload"
            layout="@layout/layout_upload_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView_addMedia"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="visible" />

        <RadioGroup
            android:id="@+id/radioGroup_articleType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <RadioButton
                android:id="@+id/radioButton_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_text" />

            <RadioButton
                android:id="@+id/radioButton_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_image" />

            <RadioButton
                android:id="@+id/radioButton_images"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_images" />

            <RadioButton
                android:id="@+id/radioButton_Video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_video" />
        </RadioGroup>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_articleType" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView_addMedia"
            android:layout_width="72dp"
            android:layout_height="112dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/grey_500"
            app:cardCornerRadius="8dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_images">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/add_media"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView_media"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/article_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/pic" />

                <ImageView
                    android:id="@+id/imageView_video"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/videos"
                    android:src="@drawable/ic_video"
                    android:tint="@color/white"
                    android:visibility="gone" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/post_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView_addMedia"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView_images">

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_title"
                android:inputType="text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:importantForAutofill="no"
                tools:targetApi="o" />
        </android.support.design.widget.TextInputLayout>
        <EditText
            android:id="@+id/editText_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bordered_gray_button"
            android:hint="@string/post_body"
            android:inputType="text"
            android:minLines="8"
            android:padding="8dp"
            android:textSize="14sp"
            android:importantForAutofill="no"
            tools:targetApi="o"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardView_addMedia"
            app:layout_constraintTop_toBottomOf="@+id/textInput_title" />

    </android.support.constraint.ConstraintLayout>
</layout>