<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".chat.fragments.ConversationFragment">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/empty"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chat_black_48dp"
                android:layout_gravity="center_horizontal"
                android:tint="@color/colorPrimary" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_messages_found"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sending"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
        <LinearLayout
            android:id="@+id/list_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/appbarlayout"
            android:layout_above="@+id/container_message">

            <TextView
                android:id="@+id/lbl_date_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19 February 2017"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f2f2f2" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_message_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f2f2f2"
            android:layout_below="@id/list_container"/>
        <LinearLayout
            android:id="@id/container_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:weightSum="10">
            <ImageButton
                android:id="@+id/imb_attach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:tint="#999999"
                android:src="@drawable/ic_attach_file_black_24dp"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:contentDescription="@string/attach_image" />
            <EditText
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_gravity="center"
                android:hint="@string/type_your_message"/>
            <ImageButton
                android:id="@+id/imb_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:src="@drawable/ic_reply_black_24dp"
                android:layout_weight="1"
                android:tint="#999999"
                style="?android:attr/buttonBarButtonStyle"
                android:contentDescription="@string/send_button" />
        </LinearLayout>
    </RelativeLayout>
</layout>