<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zaita.aliyounes.zaitafc.activities.FillInfoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_empty_image"
        android:id="@+id/imageView_profile"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_save"
        android:id="@+id/linearLayout_details"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/imageView_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person_outline_black_18dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInput_age"
                android:hint="@string/age"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/colorPrimary"
                android:layout_weight="5">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/colorPrimary"
                    android:background="@android:color/transparent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="6">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tint="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person_outline_black_18dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textInput_position"
                android:hint="@string/position"
                android:layout_marginBottom="5dp"
                android:textColorHint="@color/colorPrimary"
                android:layout_weight="5">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textImeMultiLine"
                    android:textColor="@color/colorPrimary"
                    android:background="@android:color/transparent"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="6">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:id="@+id/radioGroup_gender">
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    app:buttonTint="@color/colorPrimary"
                    android:id="@+id/radioButton_male"
                    android:text="@string/gender_male"/>
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton_female"
                    android:textColor="@color/colorPrimary"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/gender_female"/>
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/join"
        android:background="@drawable/bordered_primary_button"/>
</RelativeLayout>
