<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.zaita.aliyounes.zaitafc.chat.activities.NewChatsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:id="@+id/appBar">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:theme="@style/ToolbarTheme"
                app:title="@string/new_chat"/>
        </android.support.design.widget.AppBarLayout>

        <com.polyak.iconswitch.IconSwitch
            android:id="@+id/icon_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/relativeLayout_group"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            app:isw_icon_left="@drawable/ic_person_black_24dp"
            app:isw_icon_right="@drawable/ic_people_black_24dp" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInput_groupName">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_groupName"
                android:hint="@string/group_name"
                android:importantForAutofill="no"
                tools:targetApi="o"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:animateLayoutChanges="true"
            android:id="@+id/relativeLayout_group"
            android:layout_below="@id/textInput_groupName">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerView_selected"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_contacts_selected"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_centerInParent="true"
                android:textColor="@color/colorAccent"/>
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView_contacts"
            android:layout_below="@id/relativeLayout_group"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab_done"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_check_black_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"/>

    </RelativeLayout>

</layout>